# nanda-grokking-reproduction

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  canonical.yaml  debug.yaml
configs/sweeps/: train_fraction.yaml  weight_decay.yaml
results/runs/20260113_234552__debug__seed0/: config.yaml  metrics.jsonl
results/runs/20260113_234552__debug__seed0/analysis/: eval_summary.json  fourier_metrics.json  progress_measures.json
results/runs/20260113_235659__debug__seed0/: metrics.jsonl
results/runs/20260113_235659__debug__seed0/analysis/: ablation_step_999.json
results/runs/20260115_220348__canonical__seed0/: config.yaml  metrics.jsonl
scripts/: analyze_fourier.py  analyze_progress.py  eval_checkpoints.py  reproduce_canonical.sh  run_ablation.py  train.py  train_sweep.py
src/grokking/: __init__.py
src/grokking/data/: __init__.py  modular_addition.py  tokenization.py
src/grokking/eval/: __init__.py  eval_checkpoints.py  metrics.py
src/grokking/interp/: __init__.py  ablations.py  fourier.py  hooks.py  progress_measures.py
src/grokking/models/: __init__.py  components.py  transformer.py
src/grokking/train/: __init__.py  checkpointing.py  logging.py  optim.py  trainer.py
src/grokking/utils/: __init__.py  device.py  io.py  math.py  seed.py
src/grokking/viz/: __init__.py  plots.py
tests/: __init__.py  test_ablations.py  test_checkpointing.py  test_data.py  test_eval.py  test_fourier.py  test_hooks.py  test_model.py  test_progress_measures.py  test_training.py  test_utils.py
(+4 files in other folders)
